//Syntax , package and option
syntax = "proto3";

option java_multiple_files = true;
package com.example.user.grpc.services;

//Message structure
message GetUserRequest{
  int32 id = 1;
}
message GetUserResponse{
  string name = 1;
}

//RPC definition
service UserRPCService{
  rpc retrieveUser(GetUserRequest) returns (GetUserResponse);
}